bindings/c/whiteout_mdx.h

typedef struct whiteout_MdxParticleEmitter2 whiteout_MdxParticleEmitter2;
typedef struct whiteout_MdxRibbonEmitter whiteout_MdxRibbonEmitter;
typedef struct whiteout_MdxEventObject whiteout_MdxEventObject;
typedef struct whiteout_MdxCamera whiteout_MdxCamera;
typedef struct whiteout_MdxCollisionShape whiteout_MdxCollisionShape;
typedef struct whiteout_MdxFaceEffect whiteout_MdxFaceEffect;
typedef struct whiteout_MdxCornEmitter whiteout_MdxCornEmitter;
typedef struct whiteout_MdxParser whiteout_MdxParser;
void whiteout_mdx_MdxParticleEmitter2_set_tailLength(whiteout_MdxParticleEmitter2* self, float value);
/* Middle time for segment animation */
float whiteout_mdx_MdxParticleEmitter2_get_time(const whiteout_MdxParticleEmitter2* self);
void whiteout_mdx_MdxParticleEmitter2_set_time(whiteout_MdxParticleEmitter2* self, float value);
/* Texture index */
uint32_t whiteout_mdx_MdxParticleEmitter2_get_textureId(const whiteout_MdxParticleEmitter2* self);
void whiteout_mdx_MdxParticleEmitter2_set_textureId(whiteout_MdxParticleEmitter2* self, uint32_t value);
/* Squirt flag (burst mode) */
uint32_t whiteout_mdx_MdxParticleEmitter2_get_squirt(const whiteout_MdxParticleEmitter2* self);
void whiteout_mdx_MdxParticleEmitter2_set_squirt(whiteout_MdxParticleEmitter2* self, uint32_t value);
/* Rendering priority; signed */
int32_t whiteout_mdx_MdxParticleEmitter2_get_priorityPlane(const whiteout_MdxParticleEmitter2* self);
void whiteout_mdx_MdxParticleEmitter2_set_priorityPlane(whiteout_MdxParticleEmitter2* self, int32_t value);
/* Replaceable texture ID */
uint32_t whiteout_mdx_MdxParticleEmitter2_get_replaceableId(const whiteout_MdxParticleEmitter2* self);
void whiteout_mdx_MdxParticleEmitter2_set_replaceableId(whiteout_MdxParticleEmitter2* self, uint32_t value);
/* ── MdxRibbonEmitter ─────────────────────────────────────────────── */

/* Ribbon/trail emitter */
/*  */
/* Creates ribbon trails that follow the emitter's movement, like sword trails, missile contrails, etc. */
whiteout_MdxRibbonEmitter* whiteout_mdx_MdxRibbonEmitter_new(void);
void whiteout_mdx_MdxRibbonEmitter_delete(whiteout_MdxRibbonEmitter* self);
/* Height above attachment point */
float whiteout_mdx_MdxRibbonEmitter_get_heightAbove(const whiteout_MdxRibbonEmitter* self);
void whiteout_mdx_MdxRibbonEmitter_set_heightAbove(whiteout_MdxRibbonEmitter* self, float value);
/* Height below attachment point */
float whiteout_mdx_MdxRibbonEmitter_get_heightBelow(const whiteout_MdxRibbonEmitter* self);
void whiteout_mdx_MdxRibbonEmitter_set_heightBelow(whiteout_MdxRibbonEmitter* self, float value);
/* Ribbon opacity */
float whiteout_mdx_MdxRibbonEmitter_get_alpha(const whiteout_MdxRibbonEmitter* self);
void whiteout_mdx_MdxRibbonEmitter_set_alpha(whiteout_MdxRibbonEmitter* self, float value);
/* Ribbon color */
whiteout_Vector3f* whiteout_mdx_MdxRibbonEmitter_get_color(whiteout_MdxRibbonEmitter* self);
void whiteout_mdx_MdxRibbonEmitter_set_color(whiteout_MdxRibbonEmitter* self, const whiteout_Vector3f* value);
/* Ribbon segment lifetime */
float whiteout_mdx_MdxRibbonEmitter_get_lifespan(const whiteout_MdxRibbonEmitter* self);
void whiteout_mdx_MdxRibbonEmitter_set_lifespan(whiteout_MdxRibbonEmitter* self, float value);
/* Texture slot in material */
uint32_t whiteout_mdx_MdxRibbonEmitter_get_textureSlot(const whiteout_MdxRibbonEmitter* self);
void whiteout_mdx_MdxRibbonEmitter_set_textureSlot(whiteout_MdxRibbonEmitter* self, uint32_t value);
/* Emission rate */
uint32_t whiteout_mdx_MdxRibbonEmitter_get_emissionRate(const whiteout_MdxRibbonEmitter* self);
void whiteout_mdx_MdxRibbonEmitter_set_emissionRate(whiteout_MdxRibbonEmitter* self, uint32_t value);
/* Texture atlas rows */
uint32_t whiteout_mdx_MdxRibbonEmitter_get_rows(const whiteout_MdxRibbonEmitter* self);
void whiteout_mdx_MdxRibbonEmitter_set_rows(whiteout_MdxRibbonEmitter* self, uint32_t value);
/* Texture atlas columns */
uint32_t whiteout_mdx_MdxRibbonEmitter_get_columns(const whiteout_MdxRibbonEmitter* self);
void whiteout_mdx_MdxRibbonEmitter_set_columns(whiteout_MdxRibbonEmitter* self, uint32_t value);
/* Material index */
uint32_t whiteout_mdx_MdxRibbonEmitter_get_materialId(const whiteout_MdxRibbonEmitter* self);
void whiteout_mdx_MdxRibbonEmitter_set_materialId(whiteout_MdxRibbonEmitter* self, uint32_t value);
/* Gravity effect */
float whiteout_mdx_MdxRibbonEmitter_get_gravity(const whiteout_MdxRibbonEmitter* self);
void whiteout_mdx_MdxRibbonEmitter_set_gravity(whiteout_MdxRibbonEmitter* self, float value);
/* ── MdxEventObject ─────────────────────────────────────────────── */

/* Animation event trigger */
/*  */
/* Event objects fire events at specific animation frames, used to trigger sounds, spawn effects, etc. synchronized with animations. */
whiteout_MdxEventObject* whiteout_mdx_MdxEventObject_new(void);
void whiteout_mdx_MdxEventObject_delete(whiteout_MdxEventObject* self);
/* Global sequence if looping */
uint32_t whiteout_mdx_MdxEventObject_get_globalSequenceId(const whiteout_MdxEventObject* self);
void whiteout_mdx_MdxEventObject_set_globalSequenceId(whiteout_MdxEventObject* self, uint32_t value);
/* ── MdxCamera ─────────────────────────────────────────────── */

/* Camera definition */
/*  */
/* Cameras define viewpoints that can be used for portrait renders or in-game cutscenes. */
whiteout_MdxCamera* whiteout_mdx_MdxCamera_new(void);
void whiteout_mdx_MdxCamera_delete(whiteout_MdxCamera* self);
/* Camera name */
whiteout_CString whiteout_mdx_MdxCamera_get_name(const whiteout_MdxCamera* self);
void whiteout_mdx_MdxCamera_set_name(whiteout_MdxCamera* self, const char* value);
/* Camera position */
whiteout_Vector3f* whiteout_mdx_MdxCamera_get_position(whiteout_MdxCamera* self);
void whiteout_mdx_MdxCamera_set_position(whiteout_MdxCamera* self, const whiteout_Vector3f* value);
/* Field of view angle in radians */
float whiteout_mdx_MdxCamera_get_fieldOfView(const whiteout_MdxCamera* self);
void whiteout_mdx_MdxCamera_set_fieldOfView(whiteout_MdxCamera* self, float value);
/* Far clipping distance */
float whiteout_mdx_MdxCamera_get_farClippingPlane(const whiteout_MdxCamera* self);
void whiteout_mdx_MdxCamera_set_farClippingPlane(whiteout_MdxCamera* self, float value);
/* Near clipping distance */
float whiteout_mdx_MdxCamera_get_nearClippingPlane(const whiteout_MdxCamera* self);
void whiteout_mdx_MdxCamera_set_nearClippingPlane(whiteout_MdxCamera* self, float value);
/* Look-at target position */
whiteout_Vector3f* whiteout_mdx_MdxCamera_get_targetPosition(whiteout_MdxCamera* self);
void whiteout_mdx_MdxCamera_set_targetPosition(whiteout_MdxCamera* self, const whiteout_Vector3f* value);
/* ── MdxCollisionShape ─────────────────────────────────────────────── */

/* Collision volume for physics */
/*  */
/* Collision shapes define simplified geometry for collision detection. */
whiteout_MdxCollisionShape* whiteout_mdx_MdxCollisionShape_new(void);
void whiteout_mdx_MdxCollisionShape_delete(whiteout_MdxCollisionShape* self);
/* Shape type */
int32_t whiteout_mdx_MdxCollisionShape_get_type(const whiteout_MdxCollisionShape* self);
void whiteout_mdx_MdxCollisionShape_set_type(whiteout_MdxCollisionShape* self, int32_t value);
/* Shape vertices (box only) */
size_t whiteout_mdx_MdxCollisionShape_get_vertices_count(const whiteout_MdxCollisionShape* self);
const float* whiteout_mdx_MdxCollisionShape_get_vertices_data(const whiteout_MdxCollisionShape* self);
/* Radius (sphere/cylinder only) */
float whiteout_mdx_MdxCollisionShape_get_radius(const whiteout_MdxCollisionShape* self);
void whiteout_mdx_MdxCollisionShape_set_radius(whiteout_MdxCollisionShape* self, float value);
/* ── MdxFaceEffect ─────────────────────────────────────────────── */

/* Facial animation effect (Reforged) */
/*  */
/* Holds a name and a path to the FaceFX setup file used for a character's face. */
whiteout_MdxFaceEffect* whiteout_mdx_MdxFaceEffect_new(void);
void whiteout_mdx_MdxFaceEffect_delete(whiteout_MdxFaceEffect* self);
/* Section name */
whiteout_CString whiteout_mdx_MdxFaceEffect_get_name(const whiteout_MdxFaceEffect* self);
void whiteout_mdx_MdxFaceEffect_set_name(whiteout_MdxFaceEffect* self, const char* value);
/* Path to facial animation data */
whiteout_CString whiteout_mdx_MdxFaceEffect_get_path(const whiteout_MdxFaceEffect* self);
void whiteout_mdx_MdxFaceEffect_set_path(whiteout_MdxFaceEffect* self, const char* value);
/* ── MdxCornEmitter ─────────────────────────────────────────────── */

/* PopcornFX particle emitter (Reforged) */
/*  */
/* Advanced particle system using PopcornFX technology in Warcraft III: Reforged. Color (RGB) and alpha are stored as separate fields with independent animation tracks. */
whiteout_MdxCornEmitter* whiteout_mdx_MdxCornEmitter_new(void);
void whiteout_mdx_MdxCornEmitter_delete(whiteout_MdxCornEmitter* self);
/* Particle lifetime (default) */
float whiteout_mdx_MdxCornEmitter_get_lifeSpan(const whiteout_MdxCornEmitter* self);
void whiteout_mdx_MdxCornEmitter_set_lifeSpan(whiteout_MdxCornEmitter* self, float value);
/* Emission rate (default) */
float whiteout_mdx_MdxCornEmitter_get_emissionRate(const whiteout_MdxCornEmitter* self);
void whiteout_mdx_MdxCornEmitter_set_emissionRate(whiteout_MdxCornEmitter* self, float value);
/* Particle speed (default) */
float whiteout_mdx_MdxCornEmitter_get_speed(const whiteout_MdxCornEmitter* self);
void whiteout_mdx_MdxCornEmitter_set_speed(whiteout_MdxCornEmitter* self, float value);
/* Particle color (RGB) */
whiteout_Vector3f* whiteout_mdx_MdxCornEmitter_get_color(whiteout_MdxCornEmitter* self);
void whiteout_mdx_MdxCornEmitter_set_color(whiteout_MdxCornEmitter* self, const whiteout_Vector3f* value);
/* Particle alpha (default) */
float whiteout_mdx_MdxCornEmitter_get_alpha(const whiteout_MdxCornEmitter* self);
void whiteout_mdx_MdxCornEmitter_set_alpha(whiteout_MdxCornEmitter* self, float value);
/* Replaceable texture ID */
uint32_t whiteout_mdx_MdxCornEmitter_get_replaceableId(const whiteout_MdxCornEmitter* self);
void whiteout_mdx_MdxCornEmitter_set_replaceableId(whiteout_MdxCornEmitter* self, uint32_t value);
/* Path to PopcornFX effect */
whiteout_CString whiteout_mdx_MdxCornEmitter_get_path(const whiteout_MdxCornEmitter* self);
void whiteout_mdx_MdxCornEmitter_set_path(whiteout_MdxCornEmitter* self, const char* value);
/* Animation visibility guide */
whiteout_CString whiteout_mdx_MdxCornEmitter_get_animVisibilityGuide(const whiteout_MdxCornEmitter* self);
void whiteout_mdx_MdxCornEmitter_set_animVisibilityGuide(whiteout_MdxCornEmitter* self, const char* value);
/* ── MdxParser ─────────────────────────────────────────────── */

/* Parser for MDX model files */
/*  */
/* The Parser reads binary MDX files and converts them into the Model structure. It supports multiple parsing modes and can handle version differences. */
/*  */
/* Uses the PImpl (Pointer to Implementation) idiom to hide implementation details. */
whiteout_MdxParser* whiteout_mdx_MdxParser_new(void);