bindings/csharp/Whiteout/Mdx/NativeMethods.Mdx.cs


    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxParticleEmitter2_set_tailLength(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_mdx_MdxParticleEmitter2_get_time(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxParticleEmitter2_set_time(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_mdx_MdxParticleEmitter2_get_textureId(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxParticleEmitter2_set_textureId(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_mdx_MdxParticleEmitter2_get_squirt(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxParticleEmitter2_set_squirt(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial int whiteout_mdx_MdxParticleEmitter2_get_priorityPlane(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxParticleEmitter2_set_priorityPlane(IntPtr self, int value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_mdx_MdxParticleEmitter2_get_replaceableId(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxParticleEmitter2_set_replaceableId(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_mdx_MdxRibbonEmitter_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxRibbonEmitter_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_mdx_MdxRibbonEmitter_get_heightAbove(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxRibbonEmitter_set_heightAbove(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_mdx_MdxRibbonEmitter_get_heightBelow(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxRibbonEmitter_set_heightBelow(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_mdx_MdxRibbonEmitter_get_alpha(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxRibbonEmitter_set_alpha(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_mdx_MdxRibbonEmitter_get_color(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxRibbonEmitter_set_color(IntPtr self, IntPtr value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_mdx_MdxRibbonEmitter_get_lifespan(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxRibbonEmitter_set_lifespan(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_mdx_MdxRibbonEmitter_get_textureSlot(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxRibbonEmitter_set_textureSlot(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_mdx_MdxRibbonEmitter_get_emissionRate(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxRibbonEmitter_set_emissionRate(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_mdx_MdxRibbonEmitter_get_rows(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxRibbonEmitter_set_rows(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_mdx_MdxRibbonEmitter_get_columns(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxRibbonEmitter_set_columns(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_mdx_MdxRibbonEmitter_get_materialId(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxRibbonEmitter_set_materialId(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_mdx_MdxRibbonEmitter_get_gravity(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxRibbonEmitter_set_gravity(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_mdx_MdxEventObject_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxEventObject_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_mdx_MdxEventObject_get_globalSequenceId(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxEventObject_set_globalSequenceId(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_mdx_MdxCamera_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxCamera_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial Whiteout.Common.NativeCString whiteout_mdx_MdxCamera_get_name(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxCamera_set_name(IntPtr self, [MarshalAs(UnmanagedType.LPUTF8Str)] string value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_mdx_MdxCamera_get_position(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxCamera_set_position(IntPtr self, IntPtr value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_mdx_MdxCamera_get_fieldOfView(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxCamera_set_fieldOfView(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_mdx_MdxCamera_get_farClippingPlane(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxCamera_set_farClippingPlane(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_mdx_MdxCamera_get_nearClippingPlane(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxCamera_set_nearClippingPlane(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_mdx_MdxCamera_get_targetPosition(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxCamera_set_targetPosition(IntPtr self, IntPtr value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_mdx_MdxCollisionShape_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxCollisionShape_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial int whiteout_mdx_MdxCollisionShape_get_type(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxCollisionShape_set_type(IntPtr self, int value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial nuint whiteout_mdx_MdxCollisionShape_get_vertices_count(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_mdx_MdxCollisionShape_get_vertices_data(IntPtr self);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_mdx_MdxCollisionShape_get_radius(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxCollisionShape_set_radius(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_mdx_MdxFaceEffect_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxFaceEffect_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial Whiteout.Common.NativeCString whiteout_mdx_MdxFaceEffect_get_name(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxFaceEffect_set_name(IntPtr self, [MarshalAs(UnmanagedType.LPUTF8Str)] string value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial Whiteout.Common.NativeCString whiteout_mdx_MdxFaceEffect_get_path(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxFaceEffect_set_path(IntPtr self, [MarshalAs(UnmanagedType.LPUTF8Str)] string value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_mdx_MdxCornEmitter_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxCornEmitter_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_mdx_MdxCornEmitter_get_lifeSpan(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxCornEmitter_set_lifeSpan(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_mdx_MdxCornEmitter_get_emissionRate(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxCornEmitter_set_emissionRate(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_mdx_MdxCornEmitter_get_speed(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxCornEmitter_set_speed(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_mdx_MdxCornEmitter_get_color(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxCornEmitter_set_color(IntPtr self, IntPtr value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_mdx_MdxCornEmitter_get_alpha(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxCornEmitter_set_alpha(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_mdx_MdxCornEmitter_get_replaceableId(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxCornEmitter_set_replaceableId(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial Whiteout.Common.NativeCString whiteout_mdx_MdxCornEmitter_get_path(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxCornEmitter_set_path(IntPtr self, [MarshalAs(UnmanagedType.LPUTF8Str)] string value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial Whiteout.Common.NativeCString whiteout_mdx_MdxCornEmitter_get_animVisibilityGuide(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxCornEmitter_set_animVisibilityGuide(IntPtr self, [MarshalAs(UnmanagedType.LPUTF8Str)] string value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_mdx_MdxParser_new();
